--- a/css/about.css
+++ b/css/about.css
@@ -118,7 +118,7 @@ p {
   float: left;
   clear: both;
   width: 80%;
-  min-height: auto;
+  min-height: 535px;
   margin-left: 10%;
   font-size: 1em;
   color: rgb(0, 0, 0);
@@ -205,7 +205,7 @@ p {
 
 .whoweare-2 {
   z-index: 1;
-  margin-left: 2%;
+  margin-left: 1.47059%;
 }
 
 .text em {
