--- a/css/index.css
+++ b/css/index.css
@@ -152,6 +152,7 @@ body {
   margin: 0 auto;
   text-align: center;
   color: rgb(255, 255, 255);
+  text-shadow: 2px 4px 11px #1f1f1f;
 }
 
 .promo1 {
