--- a/css/index.css
+++ b/css/index.css
@@ -156,6 +156,7 @@ body {
   margin: 0 auto;
   text-align: center;
   color: rgb(255, 255, 255);
+  text-shadow: 2px 2px 9px #000000;
 }
 
 .promo1 {
