--- a/css/sponsors.css
+++ b/css/sponsors.css
@@ -873,7 +873,7 @@ body {
   width: 80%;
   height: auto;
   max-width: 80%;
-  overflow: auto;
+  overflow: hidden;
   filter: none;
   padding-bottom: 30px;
 }
